Replaced all occurences of LinkedList to ArrayList